--- a/CSS/elzero.css
+++ b/CSS/elzero.css
@@ -125,3 +125,109 @@ a {
     left: 0;
 }
 /* end header  */
+/* start landing */
+.landing {
+   position: relative; 
+}
+.landing::before {
+    content: "";
+    position: absolute;
+    top: -40px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ECECEC;
+    z-index: -1;
+    transform: skewY(-6deg);
+    transform-origin: top left;
+}
+.landing .container {
+    min-height: calc(100vh - 72px);
+    display: flex;
+    align-items: center;
+    padding-bottom: 100px;
+}
+.landing .text {
+    flex: 1;
+}
+@media (max-width: 991px) {
+   .landing .text {
+        text-align: center;
+    }
+}
+.landing .text h1 {
+    font-size: 40px;
+    margin: 0;
+    letter-spacing: -2px;
+}
+@media (max-width: 768px) {
+    .landing .text h1 {
+       font-size: 28px; 
+    }
+}
+.landing .text p {
+    color: #777;
+    line-height: 1.8;
+    font-size: 18px;
+    max-width: 500px;
+    margin: 5px 0 0;
+}
+@media (max-width: 991px) {
+    .landing .text p {
+        margin: 10px auto;
+    }
+}
+@media (max-width: 768px) {
+    .landing .text p {
+       font-size: 14px; 
+    }
+}
+.landing .image img {
+    position: relative;
+    width: 600px;
+    animation: up-and-down 5s linear infinite;
+}
+@media (max-width: 991px) {
+    .landing .image img {
+        display: none;
+    }
+}
+.landing .go-down {
+    color: var(--main-color);
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: var(--default-transition);
+}
+.landing .go-down:hover {
+    color: var(--main-color-alt);
+}
+.landing .go-down i {
+    animation: bouncing 1.5s infinite;
+}
+/*end landing */
+/* start animation  */
+@keyframes up-and-down {
+    0%,100% {
+        top: 0;
+    }
+    50% {
+        top: -50px;
+    }
+}
+@keyframes bouncing {
+    0%,
+    10%,
+    20%,
+    50%,
+    80%,
+    100% {
+       transform: translateY(0); 
+    }
+    40%,
+    60% {
+        transform: translateY(-10px);
+    }
+}
+/* end animation  */
