--- a/CSS/elzero.css
+++ b/CSS/elzero.css
@@ -50,6 +50,51 @@ a {
         width: 1170px;
     }
 }
+.main-title {
+    margin: 50px auto;
+    padding: 10px 20px;
+    width: fit-content;
+    border: 2px solid  black;
+    text-transform: uppercase;
+    position: relative;
+    transition: var(--default-transition);
+
+}
+.main-title:hover {
+    color: white;
+    border: 2px solid white;
+    transition-delay: 0.5s;
+}
+.main-title::before {
+    content: "";
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    background-color: var(--main-color);
+    border-radius: 50%;
+    left: -30px;
+    top: 50%;
+    transform: translateY(-50%)
+}
+.main-title::after {
+     content: "";
+     position: absolute;
+     width: 12px;
+     height: 12px;
+     background-color: var(--main-color);
+     border-radius: 50%;
+     right: -30px;
+     top: 50%;
+     transform: translateY(-50%)
+}
+.main-title:hover::before {
+     z-index: -1;
+     animation: left-move 0.5s linear forwards;
+}
+.main-title:hover::after {
+    z-index: -1;
+    animation: right-move 0.5s linear forwards;
+}
 /* end global rules  */
 /* start header  */
 .header {
@@ -303,6 +348,32 @@ a {
     40%,
     60% {
         transform: translateY(-10px);
+    }
+}
+@keyframes left-move {
+    50% {
+        left: 0;
+        width: 12px;
+        height: 12px;
+    }
+    100% {
+        left: 0;
+        border-radius: 0;
+        width: 50%;
+        height: 100%;
+    }
+}
+@keyframes right-move {
+    50% {
+        right: 0;
+        width: 12px;
+        height: 12px;
+    }
+    100% {
+        right: 0;
+        border-radius: 0;
+        width: 50%;
+        height: 100%;
     }
 }
 /* end animation  */
