--- a/CSS/elzero.css
+++ b/CSS/elzero.css
@@ -4,6 +4,7 @@
     --main-color-alt: #1787E0;
     --default-transition:0.3s;
     --main-padding: 100px;
+    --section-background: #ECECEC;
 
 }
 /* end variables */
@@ -384,6 +385,50 @@ a {
 }
 
 /* end articles */
+/* start gallery  */
+ .gallery {
+     padding-top: var(--main-padding);
+     padding-bottom: var(--main-padding);
+     position: relative;
+     background-color: var(--section-background);
+ }
+ .gallery .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    gap: 40px;
+ }
+ .gallery .box {
+    padding: 15px;
+    background-color: white;
+    box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
+ }
+ .gallery .box .image {
+     position: relative;
+     overflow: hidden;
+ }
+ .gallery .box .image::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(255 255 255 / 20%);
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+    z-index: 2;
+ }
+ .gallery .box .image:hover::before {
+     animation: flashing 0.7s;
+ }
+ .gallery .box img {
+     max-width: 100%;
+     transition: var(--default-transition);
+ }
+ .gallery .box .image:hover img {
+     transform: rotate(6deg) scale(1.1);
+ }
+/* end gallery  */
 /* start animation  */
 @keyframes up-and-down {
     0%,100% {
@@ -438,5 +483,15 @@ a {
         transform: translateX(10px);
     }
     
+}
+@keyframes flashing {
+   0%,40% {
+       opacity: 1;
+   } 
+   100% {
+       opacity: 0;
+       width: 200%;
+       height: 200%;
+   }
 }
 /* end animation  */
