--- a/CSS/elzero.css
+++ b/CSS/elzero.css
@@ -598,6 +598,91 @@ a {
     margin-bottom: 10px;
 }
 /* end testimonials */
+/* start team-members  */
+.team-members {
+     padding-top: var(--main-padding);
+     padding-bottom: var(--main-padding);
+     position: relative;
+  }
+.team-members .container {
+     display: grid;
+     grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+     gap: 40px;
+  }
+.team-members .box {
+     position: relative;
+  }
+.team-members .box::before,
+.team-members .box::after {
+    content: "";
+    position: absolute;
+    background-color: #f3f3f3;
+    top: 0;
+    right: 0;
+    height: 100%;
+    border-radius: 10px;
+    transition: var(--default-transition);
+  }
+.team-members .box::before {
+       width: calc(100% - 60px);
+       z-index: -2;
+  }
+.team-members .box::after {
+      z-index: -1;
+      background-color: #e4e4e4;
+      width: 0; 
+    }
+.team-members .box:hover::after {
+        width: calc(100% - 60px);
+    }
+.team-members .box .data {
+    display: flex;
+    align-items: center;
+    padding-top: 60px;
+}
+.team-members .box .data img {
+      width: calc(100% - 60px);
+      transition: var(--default-transition);
+      border-radius: 10px;
+  }
+.team-members .box:hover .data img {
+      filter: grayscale(100%);
+} 
+.team-members .box .data .social {
+      width: 60px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+} 
+.team-members .box .data .social a {
+    padding: 15px;
+    color: gray;
+    transition: var(--default-transition);
+}
+.team-members .box .data .social a:hover i {
+    color: var(--main-color);
+}
+  .team-members .box .data .social i {
+   color: #777;
+}
+.team-members .box .info {
+    padding-left: 80px;
+}
+.team-members .box .info h3 {
+    margin-bottom: 0;
+    color: var(--main-color);
+    font-size: 22px;
+    transition: var(--default-transition);
+}
+.team-members .box:hover .info h3 {
+    color: #777;
+}
+.team-members .box .info p {
+   margin-top: 10px;
+   margin-bottom: 25px;
+}
+/* end team-members  */
 /* start animation  */
 @keyframes up-and-down {
     0%,100% {
