--- a/CSS/elzero.css
+++ b/CSS/elzero.css
@@ -781,6 +781,9 @@ a {
     grid-template-columns: repeat(auto-fill,minmax(450px,1fr));
     gap: 40px;
 }
+.our-skills .image {
+    width: 100%;
+}
 .our-skills .image img {
    max-width: 100%;
    margin-top: 30px;
