--- a/CSS/elzero.css
+++ b/CSS/elzero.css
@@ -782,7 +782,7 @@ a {
     gap: 40px;
 }
 .our-skills .image {
-    width: 100%;
+    width: 100% ;
 }
 .our-skills .image img {
    max-width: 100%;
@@ -824,6 +824,87 @@ a {
     height: 100%;
 }
 /* end our-skills  */
+/* start work steps  */
+.work-steps {
+    padding-top: var(--main-padding);
+    padding-bottom: var(--main-padding);
+    position: relative;
+    background-color: var(--section-background); 
+    margin-top: 100px;
+}
+.work-steps .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+@media (max-width: 991px) {
+    .work-steps .container {
+        flex-direction: column;
+    }
+}
+.work-steps .image {
+    max-width: 100%;
+    margin-right: 100px;
+}
+@media (max-width: 991px) {
+    .work-steps .image {
+        margin: 0 0 50px;
+    }
+}
+.work-steps .info .box {
+    background-color: #f6f5f5;
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    border: 2px solid white;
+    position: relative;
+    z-index: 1;
+    
+}
+@media (max-width: 767px) {
+    .work-steps .info .box {
+        flex-direction: column;
+        text-align: center;
+    }
+}
+.work-steps .info .box::before {
+    content: "";
+    position: absolute;
+    top: 50%;   
+    left: 50%;  
+    transform: translate(-50%,-50%);
+    width: 0;
+    height: 0;
+    background-color: #EDEDED;
+    transition: var(--default-transition);
+    z-index: -1;
+}
+.work-steps .info .box:hover::before {
+    width: 100%;
+    height: 100%;
+   
+}
+.work-steps .info .box img {
+    width: 64px;
+    height: 64px;
+    margin-right: 30px;
+}
+@media (max-width: 767px) {
+    .work-steps .info .box img {
+       margin-right: 0;
+    }
+}
+.work-steps .info .box h3 {
+    font-size: 20px;
+}
+.work-steps .info .box p {
+    line-height: 1.6;
+    color: #777;
+    font-size: 18px;
+}
+/* end work steps  */
 /* start animation  */
 @keyframes up-and-down {
     0%,100% {
