--- a/CSS/elzero.css
+++ b/CSS/elzero.css
@@ -1034,6 +1034,163 @@ a {
     background-color: var(--main-color-alt);
 }
 /* End Events  */
+/* start pricing  */
+.pricing {
+    padding-top: var(--main-padding);
+    padding-bottom: var(--main-padding);
+    position: relative;
+    background-color: var(--section-background); 
+}
+.pricing .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    gap: 40px;
+}
+.pricing .box {
+    background-color: white;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+    transition: var(--default-transition);
+}
+.pricing .box::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 50%;
+    width: 0;
+    background-color: #f6f6f6;
+    z-index: -1;
+    transition:var(--default-transition) ;
+}
+.pricing .box:hover::before {
+    width: 100%;
+  
+}
+.pricing .box::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 50%;
+    width: 0;
+    background-color: #f6f6f6;
+    z-index: -1;
+    transition:var(--default-transition) ;
+}
+.pricing .box:hover::after {
+    width: 100%;
+
+}
+.pricing .popular {
+    transform: translateY(-20px);
+}
+@media (max-width: 1199px) {
+    .pricing .popular {
+        transform: translateY(0px);
+    }
+}
+/* .pricing .box .label {
+    width: fit-content;
+    background-color: var(--main-color);
+    color: white;
+    padding: 10px 20px;
+    position: absolute;
+    right: -20px;
+    transform: rotate(90deg) translatex(45px);
+} */
+/* .pricing .box .label::after {
+    content: "";
+    position: absolute;
+    right: -1px;
+    top: 0;
+    width: 0;
+    height: 0;
+    border: 19px solid;
+    border-color: transparent white transparent transparent;
+} */
+.pricing .popular .label {
+    position: absolute;
+    writing-mode: vertical-lr;
+    background-color: var(--main-color);
+    color: white;
+    padding: 10px 10px 35px 10px;
+    font-size: 18px;
+    font-weight: bold;
+    width: 40px;
+    right: 20px;
+}
+.pricing .popular .label::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border: 20px solid;
+    border-color: transparent transparent white;
+    bottom: 0;
+    left: 0;
+}
+.pricing .box .title{
+    margin: 30px 0;
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: -1px;
+}
+.pricing .box img {
+    width: 75px;
+    height: 75px;
+    margin: 0 0 30px;
+}
+.pricing .box .price .amount {
+    display: block;
+    font-size: 50px;
+    font-weight: bold;
+    color: var(--main-color);
+}
+.pricing .box .price .time {
+    display: block;
+    margin: 0 0 30px;
+    color: #777;
+    font-size: 16px;
+}
+.pricing .box ul {
+    text-align: start;
+}
+.pricing .box ul li {
+    padding: 20px;
+    border-top: 1px solid #e4e4e4;
+    position: relative
+}
+.pricing .box ul li::before {
+    content: "\f00c";
+    font-family: 'Font Awesome 5 Free';
+    /* position: absolute; */
+    font-weight: 900;
+    margin-right: 10px;
+    color: var(--main-color);
+    /* left: 15px;
+    top: 50%;
+    transform: translateY(-50%); */
+}
+.pricing .box a {
+    display: block;
+    margin: 30px auto;
+    color: var(--main-color);
+    width: fit-content;
+    padding: 10px 20px;
+    font-weight: bold;
+    border: 2px solid var(--main-color);
+    border-radius: 6px;
+    transition: var(--default-transition);
+}
+.pricing .box a:hover {
+    background-color: var(--main-color-alt);
+    border-color: var(--main-color-alt);
+    color: white;
+}
+/* end pricing  */
 /* start animation  */
 @keyframes up-and-down {
     0%,100% {
