--- a/CSS/elzero.css
+++ b/CSS/elzero.css
@@ -1191,6 +1191,65 @@ a {
     color: white;
 }
 /* end pricing  */
+/* start videos  */
+.videos {
+    padding-top: var(--main-padding);
+    padding-bottom: var(--main-padding);
+}
+.videos .holder {
+    display: flex;
+    justify-content: center;
+    background-color: var(--section-background);
+    border: 1px solid #ddd;
+}
+@media (max-width: 991px) {
+    .videos .holder {
+        flex-direction: column;
+    }
+}
+.videos .holder .list {
+    min-width: 300px;
+    background-color: white
+}
+.videos .holder .list .name {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    font-weight: bold;
+    background-color: #f4f4f4;
+    color: var(--main-color);
+}
+.videos .holder .list ul li {
+    padding: 20px;
+    border: 1px solid var(--section-background);
+    cursor: pointer;
+    transition: var(--default-transition);
+}
+.videos .holder .list ul li:hover {
+    background-color: #fafafa;
+    color: var(--main-color);
+}
+.videos .holder .list ul li span {
+    display: block;
+    color: #777;
+    margin-top: 10px;
+}
+.videos .holder .preview  {
+    padding: 10px;
+    background-color: #e2e2e2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.videos .holder .preview img {
+     max-width: 100%;
+}
+.videos .holder .preview .info {
+    padding: 20px;
+    background-color: white;
+    margin-top: 10px;
+}
+/* end videos  */
 /* start animation  */
 @keyframes up-and-down {
     0%,100% {
