--- a/CSS/elzero.css
+++ b/CSS/elzero.css
@@ -98,6 +98,36 @@ a {
     z-index: -1;
     animation: right-move 0.5s linear forwards;
 }
+.spikes {
+    position: relative;
+}
+.spikes::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    width: 100%;
+    height: 30px;
+    z-index: 1;
+    background-image: 
+    linear-gradient(135deg, white 25%, transparent 25%),
+    linear-gradient(225deg, white 25%, transparent 25%);
+    background-size: 30px 30px;
+}
+.dots {
+    background-image: url(../Images/dots.png);
+    height: 186px;
+    width: 204px;
+    background-repeat: no-repeat;
+    position: absolute;
+}
+.dots-up {
+    top: 200px;
+    right: 0;
+}
+.dots-down {
+    bottom: 200px;
+    left: 0;
+}
 /* end global rules  */
 /* start header  */
 .header {
@@ -1334,6 +1364,11 @@ a {
     display: flex;
     flex-wrap: wrap;
 }
+@media (max-width: 767px) {
+    .discount {
+      padding-bottom: 30px;
+    }
+}
 .discount .image  {
     background-image: url(../Images/discount-background1.jpg);
     background-size: cover;
@@ -1404,6 +1439,12 @@ a {
 .discount .form input[type="submit"]:hover {
     background-color: var(--main-color-alt);
 }
+.discount .form .input::placeholder {
+    transition: opacity var(--default-transition);
+}
+.discount .form .input:focus::placeholder {
+    opacity: 0;
+}
 .discount .content {
     text-align: center;
     padding: 0 20px;
@@ -1422,6 +1463,135 @@ a {
     width: 300px;
 }
 /* end discount */
+/* start footer  */
+footer {
+    background-color: #191919;
+    padding: 70px 0 0;
+}
+@media (max-width: 767px) {
+    footer {
+        text-align: center;
+    } 
+}
+footer .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+    gap: 20px;
+}
+footer .box h3 {
+    color: white;
+    font-size: 50px;
+    margin: 0 0 20px;
+}
+footer .box .social {
+    display: flex;
+    align-items: center;
+}
+@media (max-width: 767px) {
+    footer .box .social {
+        justify-content: center;
+    } 
+}
+footer .box .social li {
+    margin-right: 10px;
+}
+footer .box .social li a {
+    background-color: #313131;
+    color: #b9b9b9;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    transition: var(--default-transition);
+}
+footer .box .social .facebook:hover {
+    background-color: #1877f2;
+}
+footer .box .social .twitter:hover {
+    background-color: #1da1f2;
+}
+footer .box .social .youtube:hover {
+    background-color: #ff0000;
+}
+footer .box .text {
+    color: #b9b9b9;
+    line-height: 2;
+    font-size: 18px;
+}
+@media (max-width: 767px) {
+    footer .box .text {
+      max-width: 700px;
+      margin: 0 auto;
+    }
+}
+footer .box .links li {
+    padding: 15px 0;
+    transition: var(--default-transition);
+}
+footer .box .links li:not(:last-child) {
+    border-bottom: 1px solid #444;
+}
+footer .box .links li:hover {
+    padding-left: 10px;
+}
+footer .box .links li:hover a {
+    color: white;
+}
+footer .box .links li::before {
+    content: "\f101";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    margin-right: 10px;
+    color: var(--main-color);
+}
+footer .box .links li a {
+    color: #b9b9b9;
+    transition: var(--default-transition);
+}
+footer .box .line {
+    display: flex;
+    align-items: center;
+    color: #b9b9b9;
+    margin-bottom: 30px;
+}
+footer .box .line i {
+    color: var(--main-color);
+    font-size: 25px;
+    margin-right: 10px;
+}
+@media (max-width: 767px) {
+    footer .box .line {
+        flex-direction: column;
+    }
+    footer .box .line i {
+        margin-bottom: 10px;
+    }
+}
+footer .box .line .info {
+    font-size: 18px;
+    line-height: 1.6;
+    flex: 1;
+}
+footer .box .line .info span {
+    display: block;
+}
+footer .footer-gallery img {
+    width: 78px;
+    border: 3px solid white;
+    margin: 2px;
+}
+footer .copy-right {
+    color: white;
+    padding: 25px 0;
+    text-align: center;
+    margin: 50px 0 0;
+    border-top: 1px solid #444;
+}
+footer .copy-right i {
+    color: #d41b1b;
+}
+/* end footer  */
 /* start animation  */
 @keyframes up-and-down {
     0%,100% {
