--- a/CSS/lyan.css
+++ b/CSS/lyan.css
@@ -950,6 +950,17 @@ a {
 .events img {
     max-width: 450px;
 }
+@media (max-width: 1199px) {
+    .dots {
+        display: none;
+    }
+    .dots-up {
+        display: none;
+    }
+    .dots-down {
+        display: none;
+    }
+}
 @media (max-width: 991px) {
     .events img {
         display: none ;
